--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
                 <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-                <h4>'PHARRELL WILLIAMS</h4>
+                <h4>PHARRELL WILLIAMS</h4>
 
           <!-- Level 2 'HAPPY' Header -->
                 <!-- Level 2 'HAPPY' Header -->
@@ -62,7 +62,7 @@
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
             <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-            <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia-logo">
+            <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="columbia">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
             <!-- span text 'COLUMBIARECORDS.COM' -->
@@ -73,7 +73,7 @@
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
             <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-            <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="sony-logo">
+            <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="sony">
 
       </div>
         </div>
